--- a/files/profile/styles.css
+++ b/files/profile/styles.css
@@ -24,23 +24,13 @@
   width:0px;
   height:0px;
 }
-#u329_div {
+#u329_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:508px;
   height:87px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 1);
-  box-sizing:border-box;
-  border-width:1px;
-  border-style:solid;
-  border-color:rgba(121, 121, 121, 1);
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
 }
 #u329 {
   border-width:0px;
