--- a/files/maintenance/styles.css
+++ b/files/maintenance/styles.css
@@ -32,23 +32,13 @@
   width:0px;
   height:0px;
 }
-#u258_div {
+#u258_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:1062px;
   height:761px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 1);
-  box-sizing:border-box;
-  border-width:1px;
-  border-style:solid;
-  border-color:rgba(121, 121, 121, 1);
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
 }
 #u258 {
   border-width:0px;
