--- a/files/maintenance/styles.css
+++ b/files/maintenance/styles.css
@@ -62,15 +62,7 @@
   text-transform:none;
   visibility:hidden;
 }
-#u259 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  height:0px;
-}
-#u260_div {
+#u259_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -89,11 +81,11 @@
   font-style:normal;
   text-align:center;
 }
-#u260 {
+#u259 {
   border-width:0px;
   position:absolute;
   left:431px;
-  top:507px;
+  top:36px;
   width:200px;
   height:37px;
   display:flex;
@@ -101,6 +93,46 @@
   font-weight:700;
   font-style:normal;
   text-align:center;
+}
+#u259 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u259_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u260_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:757px;
+  height:40px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  text-align:center;
+  line-height:20px;
+}
+#u260 {
+  border-width:0px;
+  position:absolute;
+  left:153px;
+  top:89px;
+  width:757px;
+  height:40px;
+  display:flex;
+  text-align:center;
+  line-height:20px;
 }
 #u260 .text {
   position:absolute;
@@ -111,58 +143,18 @@
 }
 #u260_text {
   border-width:0px;
-  white-space:nowrap;
+  word-wrap:break-word;
   text-transform:none;
-}
-#u261_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:757px;
-  height:40px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  text-align:center;
-  line-height:20px;
 }
 #u261 {
   border-width:0px;
   position:absolute;
-  left:153px;
-  top:560px;
-  width:757px;
-  height:40px;
-  display:flex;
-  text-align:center;
-  line-height:20px;
-}
-#u261 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u261_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-}
-#u262 {
-  border-width:0px;
-  position:absolute;
   left:0px;
   top:0px;
   width:0px;
   height:0px;
 }
-#u263_div {
+#u262_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -181,11 +173,11 @@
   font-style:normal;
   text-align:center;
 }
-#u263 {
+#u262 {
   border-width:0px;
   position:absolute;
-  left:458px;
-  top:651px;
+  left:459px;
+  top:647px;
   width:147px;
   height:28px;
   display:flex;
@@ -194,25 +186,55 @@
   font-style:normal;
   text-align:center;
 }
-#u263 .text {
+#u262 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u263_text {
+#u262_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u264 {
+#u263 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:0px;
   height:0px;
+}
+#u264_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:31px;
+  height:31px;
+}
+#u264 {
+  border-width:0px;
+  position:absolute;
+  left:575px;
+  top:685px;
+  width:31px;
+  height:31px;
+  display:flex;
+}
+#u264 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u264_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
 }
 #u265_img {
   border-width:0px;
@@ -225,8 +247,8 @@
 #u265 {
   border-width:0px;
   position:absolute;
-  left:574px;
-  top:689px;
+  left:497px;
+  top:685px;
   width:31px;
   height:31px;
   display:flex;
@@ -255,8 +277,8 @@
 #u266 {
   border-width:0px;
   position:absolute;
-  left:496px;
-  top:689px;
+  left:536px;
+  top:685px;
   width:31px;
   height:31px;
   display:flex;
@@ -279,16 +301,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:31px;
-  height:31px;
+  width:32px;
+  height:32px;
 }
 #u267 {
   border-width:0px;
   position:absolute;
-  left:535px;
-  top:689px;
-  width:31px;
-  height:31px;
+  left:457px;
+  top:684px;
+  width:32px;
+  height:32px;
   display:flex;
 }
 #u267 .text {
@@ -309,16 +331,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:32px;
-  height:32px;
+  width:50px;
+  height:50px;
 }
 #u268 {
   border-width:0px;
   position:absolute;
-  left:456px;
-  top:688px;
-  width:32px;
-  height:32px;
+  left:506px;
+  top:119px;
+  width:50px;
+  height:50px;
   display:flex;
 }
 #u268 .text {
@@ -339,16 +361,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:50px;
-  height:50px;
+  width:607px;
+  height:412px;
 }
 #u269 {
   border-width:0px;
   position:absolute;
-  left:506px;
-  top:590px;
-  width:50px;
-  height:50px;
+  left:228px;
+  top:212px;
+  width:607px;
+  height:412px;
   display:flex;
 }
 #u269 .text {
@@ -364,37 +386,7 @@
   text-transform:none;
   visibility:hidden;
 }
-#u270_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:607px;
-  height:412px;
-}
-#u270 {
-  border-width:0px;
-  position:absolute;
-  left:224px;
-  top:68px;
-  width:607px;
-  height:412px;
-  display:flex;
-}
-#u270 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u270_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u271_div {
+#u270_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -413,11 +405,11 @@
   font-style:normal;
   text-align:center;
 }
-#u271 {
+#u270 {
   border-width:0px;
   position:absolute;
   left:293px;
-  top:507px;
+  top:94px;
   width:452px;
   height:37px;
   display:flex;
@@ -425,6 +417,46 @@
   font-weight:700;
   font-style:normal;
   text-align:center;
+}
+#u270 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u270_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u271_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:757px;
+  height:60px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  text-align:center;
+  line-height:20px;
+}
+#u271 {
+  border-width:0px;
+  position:absolute;
+  left:141px;
+  top:147px;
+  width:757px;
+  height:60px;
+  display:flex;
+  text-align:center;
+  line-height:20px;
 }
 #u271 .text {
   position:absolute;
@@ -435,58 +467,18 @@
 }
 #u271_text {
   border-width:0px;
-  white-space:nowrap;
+  word-wrap:break-word;
   text-transform:none;
-}
-#u272_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:757px;
-  height:60px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  text-align:center;
-  line-height:20px;
 }
 #u272 {
   border-width:0px;
   position:absolute;
-  left:141px;
-  top:560px;
-  width:757px;
-  height:60px;
-  display:flex;
-  text-align:center;
-  line-height:20px;
-}
-#u272 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u272_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-}
-#u273 {
-  border-width:0px;
-  position:absolute;
   left:0px;
   top:0px;
   width:0px;
   height:0px;
 }
-#u274_div {
+#u273_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -505,11 +497,11 @@
   font-style:normal;
   text-align:center;
 }
-#u274 {
+#u273 {
   border-width:0px;
   position:absolute;
-  left:446px;
-  top:651px;
+  left:459px;
+  top:657px;
   width:147px;
   height:28px;
   display:flex;
@@ -518,25 +510,55 @@
   font-style:normal;
   text-align:center;
 }
-#u274 .text {
+#u273 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u274_text {
+#u273_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u275 {
+#u274 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:0px;
   height:0px;
+}
+#u275_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:31px;
+  height:31px;
+}
+#u275 {
+  border-width:0px;
+  position:absolute;
+  left:575px;
+  top:695px;
+  width:31px;
+  height:31px;
+  display:flex;
+}
+#u275 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u275_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
 }
 #u276_img {
   border-width:0px;
@@ -549,8 +571,8 @@
 #u276 {
   border-width:0px;
   position:absolute;
-  left:562px;
-  top:689px;
+  left:497px;
+  top:695px;
   width:31px;
   height:31px;
   display:flex;
@@ -579,8 +601,8 @@
 #u277 {
   border-width:0px;
   position:absolute;
-  left:484px;
-  top:689px;
+  left:536px;
+  top:695px;
   width:31px;
   height:31px;
   display:flex;
@@ -603,16 +625,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:31px;
-  height:31px;
+  width:32px;
+  height:32px;
 }
 #u278 {
   border-width:0px;
   position:absolute;
-  left:523px;
-  top:689px;
-  width:31px;
-  height:31px;
+  left:457px;
+  top:694px;
+  width:32px;
+  height:32px;
   display:flex;
 }
 #u278 .text {
@@ -628,35 +650,13 @@
   text-transform:none;
   visibility:hidden;
 }
-#u279_img {
+#u279 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:32px;
-  height:32px;
-}
-#u279 {
-  border-width:0px;
-  position:absolute;
-  left:444px;
-  top:688px;
-  width:32px;
-  height:32px;
-  display:flex;
-}
-#u279 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u279_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
+  width:0px;
+  height:0px;
 }
 #u280_img {
   border-width:0px;
@@ -670,7 +670,7 @@
   border-width:0px;
   position:absolute;
   left:504px;
-  top:138px;
+  top:301px;
   width:394px;
   height:270px;
   display:flex;
@@ -700,7 +700,7 @@
   border-width:0px;
   position:absolute;
   left:141px;
-  top:138px;
+  top:301px;
   width:394px;
   height:270px;
   display:flex;
@@ -730,7 +730,7 @@
   border-width:0px;
   position:absolute;
   left:237px;
-  top:72px;
+  top:235px;
   width:564px;
   height:402px;
   display:flex;
@@ -759,7 +759,7 @@
   border-width:0px;
   position:absolute;
   left:892px;
-  top:259px;
+  top:422px;
   width:100px;
   height:29px;
   display:flex;
@@ -793,7 +793,7 @@
   border-width:0px;
   position:absolute;
   left:46px;
-  top:259px;
+  top:422px;
   width:100px;
   height:29px;
   display:flex;
@@ -835,7 +835,7 @@
   border-width:0px;
   position:absolute;
   left:1143px;
-  top:144px;
+  top:114px;
   width:357px;
   height:285px;
   display:flex;
@@ -849,6 +849,50 @@
   width:100%;
 }
 #u285_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+#u286_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:714px;
+  height:37px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:"Arial Bold", "Arial", sans-serif;
+  font-weight:700;
+  font-style:normal;
+  text-align:center;
+}
+#u286 {
+  border-width:0px;
+  position:absolute;
+  left:162px;
+  top:40px;
+  width:714px;
+  height:37px;
+  display:flex;
+  font-family:"Arial Bold", "Arial", sans-serif;
+  font-weight:700;
+  font-style:normal;
+  text-align:center;
+}
+#u286 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u286_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
