--- a/files/maintenance/styles.css
+++ b/files/maintenance/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:relative;
   left:-81.5px;
-  width:1418.5px;
+  width:1424.5px;
   margin-left:auto;
   margin-right:auto;
   text-align:left;
@@ -834,8 +834,8 @@
 #u285 {
   border-width:0px;
   position:absolute;
-  left:1143px;
-  top:114px;
+  left:1149px;
+  top:276px;
   width:357px;
   height:285px;
   display:flex;
@@ -893,6 +893,44 @@
   width:100%;
 }
 #u286_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+#u287_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:150px;
+  height:150px;
+  background:inherit;
+  background-color:rgba(255, 223, 37, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  text-align:center;
+}
+#u287 {
+  border-width:0px;
+  position:absolute;
+  left:1149px;
+  top:75px;
+  width:150px;
+  height:150px;
+  display:flex;
+  text-align:center;
+}
+#u287 .text {
+  position:absolute;
+  align-self:center;
+  padding:10px 10px 10px 10px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u287_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
